--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -52,6 +52,18 @@
 	publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
 
+@article{budescu1993dominance,
+	title={Dominance analysis: a new approach to the problem of relative importance of predictors in multiple regression.},
+	author={Budescu, David V},
+	journal={Psychological bulletin},
+	volume={114},
+	number={3},
+	pages={542},
+	year={1993},
+	publisher={American Psychological Association}
+}
+
+
  @Manual{R,
 	title = {R: A Language and Environment for Statistical Computing},
 	author = {{R Core Team}},
@@ -127,17 +139,6 @@
 	publisher={Academy of Management Briarcliff Manor, NY}
 }
 
-@article{glerum2021trainer,
-	title={The trainer matters: Cross-classified models of trainee reactions.},
-	author={Glerum, David R and Joseph, Dana L and McKenny, Aaron F and Fritzsche, Barbara A},
-	journal={Journal of Applied Psychology},
-	volume={106},
-	number={2},
-	pages={281},
-	year={2021},
-	publisher={American Psychological Association}
-}
-
 @article{gromping2007estimators,
 	title={Estimators of relative importance in linear regression based on variance decomposition},
 	author={Gr{\"o}mping, Ulrike},
@@ -159,17 +160,6 @@
 	pages={129},
 	year={2003},
 	publisher={American Psychological Association}
-}
-
-@article{somaya2008gone,
-	title={Gone but not lost: The different performance impacts of employee mobility between cooperators versus competitors},
-	author={Somaya, Deepak and Williamson, Ian O and Lorinkova, Natalia},
-	journal={Academy of Management Journal},
-	volume={51},
-	number={5},
-	pages={936--953},
-	year={2008},
-	publisher={Academy of Management Briarcliff Manor, NY}
 }
 
 @article{johnson2004history,
@@ -392,4 +382,14 @@
 	pages={281},
 	year={1955},
 	publisher={American Psychological Association}
+}
+
+@article{motowidlo2003job,
+	title={Job performance},
+	author={Motowidlo, Stephan J},
+	journal={Handbook of psychology: Industrial and organizational psychology},
+	volume={12},
+	number={4},
+	pages={39--53},
+	year={2003}
 }
